deploy: e61ef0db2adb4e2ebe88688e96e009825598e5dc

--- a/404.html
+++ b/404.html
@@ -226,8 +226,7 @@
 <h2>ʕノ•ᴥ•ʔノ ︵ ┻━┻</h2>
 
   </main>
-  <footer>Made with <a href="https://github.com/janraasch/hugo-bearblog/">Hugo ʕ•ᴥ•ʔ Bear</a>
-</footer>
+  <footer>Copyright @ Minbok Wi 2024</a></footer>
 
     
 </body>
