--- a/index.html
+++ b/index.html
@@ -252,8 +252,7 @@ Also, I&rsquo;m interested in enhancing system reliability against silient data 
 
 
   </main>
-  <footer>Made with <a href="https://github.com/janraasch/hugo-bearblog/">Hugo ʕ•ᴥ•ʔ Bear</a>
-</footer>
+  <footer>Copyright @ Minbok Wi 2024</a></footer>
 
     
 </body>
