Update rowarmor paper

--- a/public/404.html
+++ b/public/404.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
 <html lang="en-US">
 
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<head>
   <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<link rel="shortcut icon" href="http://localhost:1313/images/favicon.png" />
+<link rel="shortcut icon" href="https://homakaka.github.io/images/favicon.png" />
 <title>404</title>
 <meta name="title" content="404 Page not found" />
 <meta name="description" content="What should I do?" />
 <meta name="keywords" content="" />
 
 
-<meta property="og:url" content="http://localhost:1313/404.html">
+<meta property="og:url" content="https://homakaka.github.io/404.html">
   <meta property="og:site_name" content="Minbok Wi">
   <meta property="og:title" content="404 Page not found">
   <meta property="og:description" content="What should I do?">
   <meta property="og:locale" content="en_US">
   <meta property="og:type" content="website">
-    <meta property="og:image" content="http://localhost:1313/images/share.png">
+    <meta property="og:image" content="https://homakaka.github.io/images/share.png">
 
 
 
 
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:image" content="http://localhost:1313/images/share.png">
+  <meta name="twitter:image" content="https://homakaka.github.io/images/share.png">
   <meta name="twitter:title" content="404 Page not found">
   <meta name="twitter:description" content="What should I do?">
 
@@ -33,7 +33,7 @@
 
   <meta itemprop="name" content="404 Page not found">
   <meta itemprop="description" content="What should I do?">
-  <meta itemprop="image" content="http://localhost:1313/images/share.png">
+  <meta itemprop="image" content="https://homakaka.github.io/images/share.png">
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
   <style>
